# football_valuation_project

./: .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
football_valuation_project/: __init__.py  dataset.py  features.py  plots.py
football_valuation_project/modeling/: predict.py  train.py
notebooks/: 01-eda-football.ipynb  02-model-training.ipynb
